--- a/home/css/keyboardkit.css
+++ b/home/css/keyboardkit.css
@@ -10,10 +10,20 @@ body {
     font-family: 'Oswald', sans-serif;
     color: #aaa;
     height: 100%;
-    min-width: 1680px;
-    min-height: 1050px;
+    width: 100%;
+    min-width: 1920px;
+    min-height: 1080px;
     font-size: 16px;
+    background-color: #000;
 }
+
+/*body.portrait {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}*/
 
 .fill-height {
     min-height: 100%;
