--- a/home/css/keyboardkit.css
+++ b/home/css/keyboardkit.css
@@ -15,7 +15,7 @@ body {
     min-height: 1080px;
     font-size: 16px;
     background-color: #000;
-    padding: 20px 20px 20px 50px;
+    padding: 20px 20px 20px 20px;
 }
 
 #keybaordKit {
@@ -83,6 +83,8 @@ body {
     z-index: 1000;
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
+    min-width: 1920px;
+    min-height: 1080px;
 }
 
 #modal_parent #modal_body {
@@ -111,9 +113,20 @@ body {
     color: black;
     overflow-y: auto;
     padding: 16px 50px;
+    width: 100%;
+    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-flow: row wrap;
 }
 
 .modal-body p {
     margin: 20px 30px;
+}
+
+.modal-body .animate-repeat {
+    width: 50%;
+    flex-basis: auto;
 }
 
