--- a/home/css/keyboardkit.css
+++ b/home/css/keyboardkit.css
@@ -11,8 +11,8 @@ body {
     color: #aaa;
     height: 100%;
     width: 100%;
-    min-width: 1920px;
-    min-height: 1080px;
+    min-width: fit-content;
+    min-height: fit-content;
     font-size: 16px;
     background-color: #000;
     padding: 20px 20px 20px 20px;
@@ -50,6 +50,13 @@ body {
 #keybaordKit .sr_center {
     flex: 1 1 auto;
     display: flex;
+}
+
+body.portrait #keybaordKit .sr_center {
+    flex-flow: column;
+}
+
+body.landscape #keybaordKit .sr_center {
     flex-flow: row;
 }
 
