--- a/home/page_modules/header-module.css
+++ b/home/page_modules/header-module.css
@@ -13,7 +13,7 @@
 #header_module .srSiteName {
     font-size: 35px;
     text-shadow: 1px 2px 4px rgba(154, 172, 214, 1);
-    color: #375a7f;
+    color: #000000;
     letter-spacing: 3px;
 }
 #header_module .midi-detect-mod {
