--- a/home/page_modules/piano-module.css
+++ b/home/page_modules/piano-module.css
@@ -4,7 +4,7 @@
 
 .piano-module {
     width: 100%;
-    height: 300px;
+    height: 100%;
     padding: 0px 20px 00px 20px;
     /*    background-image: linear-gradient(to bottom, darkred 1%, white 3.5%, darkred 6%, black 8%, darkred 97.5%, white 100%);*/
 }
@@ -12,7 +12,7 @@
 /* keyboard itself */
 .piano-module .piano {
     width: 100%;
-    height: 220px;
+    height: 120px;
     padding: 0px;
 }
 
@@ -95,7 +95,8 @@
 
 .piano-module #key_buttons {
     width: 100%;
-    height: 52px;
+    height: 50px;
+    margin-bottom: 10px;
 }
 
 .piano-module #key_buttons .col {
